Update front page, favicon

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -70,6 +70,7 @@
 			<div class="row">
 				<div class="col-lg-12 centered">
 					 <a href="/signup" class="btn btn-default btn-large">Sign up</a>
+					 <h5>Coming soon to Android</h5>
 				</div>
 			</div>
 		</div>
