--- a/app/views/header.ejs
+++ b/app/views/header.ejs
@@ -68,9 +68,9 @@
                         <li class="dropdown pull-right">
                             <a href="#" data-toggle="dropdown" class="dropdown-toggle"><%= user.uname %> <b class="caret"></b></a>
                             <ul class="dropdown-menu">
-                                <li><a href="/logout">Logout</a></li>
+                                <li><a href="/notes">My Notes</a></li>
                                 <li class="divider"></li>
-                                <li><a href="/help">Help</a></li>
+                                <li><a href="/logout">Logout</a></li>
                             </ul>
                         </li>
                     </ul>
